# Tet_two_game

./: .gitignore  CMakeLists.txt  CMakePresets.json
Tet_two/: CMakeLists.txt
Tet_two/data/: activated_words.txt  start_menu(help).txt  start_menu(left).txt  start_menu(left2).txt  start_menu(right).txt  start_menu(right2).txt  start_menu(score).txt  start_menu(setup).txt  start_menu(start).txt  start_menu(template).txt  words.txt
Tet_two/data/setup/: setting.txt  setup.txt  words.txt
Tet_two/data/setup/backgraund_color/: color.txt
Tet_two/data/setup/end_video/: video1.txt  video2.txt
Tet_two/data/setup/falling_speed/: speed1.txt  speed2.txt  speed3.txt  speed4.txt  speed5.txt  speed6.txt  speed7.txt  speed8.txt
Tet_two/data/setup/game_mode/: mode1.txt  mode2.txt  mode3.txt
Tet_two/data/setup/height/: height1.txt  height2.txt  height3.txt  height4.txt  height5.txt  height6.txt  height7.txt  height8.txt
Tet_two/data/setup/music/: music1.txt  music2.txt  music3.txt  music4.txt  music5.txt  music6.txt  music7.txt  music8.txt  music9.txt
Tet_two/data/start_menu/: start_menu(exit).txt  start_menu(info).txt  start_menu(left).txt  start_menu(left2).txt  start_menu(right).txt  start_menu(right2).txt  start_menu(start).txt
Tet_two/headers/: Tet_two.h  console_functions.h
Tet_two/headers/setup/: setup.h
Tet_two/headers/start_menu/: button_grid.h  menu_thread.h  start_menu_ani.h
Tet_two/sources/: Tet_two.cpp  console_functions.cpp
Tet_two/sources/setup/: setup.cpp
Tet_two/sources/start_menu/: button_grid.cpp  menu_thread.cpp  start_menu_ani.cpp
(+54 files in other folders)
